First actual shortcuts. Beta testing

--- a/cheatsheet.tex
+++ b/cheatsheet.tex
@@ -1,5 +1,5 @@
 %%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%%
-% Cheatsheet
+% EPIC EMR Cheatsheet
 % LaTeX Template
 % Version 1.0 (12/12/15)
 %
@@ -9,6 +9,8 @@
 % Original author:
 % Michael Müller (https://github.com/cmichi/latex-template-collection) with
 % extensive modifications by Vel (vel@LaTeXTemplates.com)
+% EPIC EMR Shortcut Author:
+%	Jed Frey, <2020>
 %
 % License:
 % The MIT License (see included LICENSE file)
@@ -62,7 +64,7 @@ pdfkeywords={Random Software, Cheatsheet}
 
 \put(10,200){ % Position on the page to put the title
 \begin{minipage}[t]{210mm} % The size and alignment of the title
-\section*{Cheatsheet Template -- Application Shortcuts} % Title
+\section*{EPIC EMR Application Shortcuts} % Title
 \end{minipage}
 }
 
@@ -81,8 +83,8 @@ pdfkeywords={Random Software, Cheatsheet}
 			
 Client = Application window.\\
 
-\command{Mod4 + Ctrl + r}{Restart awesome}
-\command{Mod4 + Return}{Start terminal in current tag}
+\command{Alt + A}{Accept Orders}
+\command{Alt + S}{Sign Orders}
 \command{Mod4 + F1}{Run terminal prompt}
 \command{Mod4 + F4}{Run Lua code prompt}
 
@@ -179,27 +181,12 @@ B1, B2, B3 = Mouse buttons 1--3.\\
 \begin{minipage}[t]{85mm} % Create a box to house tex
 
 %----------------------------------------------------------------------------------------
-%	IMPORTANT FILES
-%----------------------------------------------------------------------------------------
-
-\sectiontitle{Important files}
-
-\texttt{/.config/awesome/rc.lua}
-
-\texttt{/etc/xdg/awesome/rc.lua}
-
-\vspace{\baselineskip} % Whitespace before the next section
-
-%----------------------------------------------------------------------------------------
 %	LINKS AND INFORMATION
 %----------------------------------------------------------------------------------------
 
 \sectiontitle{Links and information}
 
-\url{http://awesome.naquadah.org/}
-
-\url{http://awesome.naquadah.org/wiki/}
-
+\url{https://www.epic.com/}
 %----------------------------------------------------------------------------------------
 %	FOOTNOTE
 %----------------------------------------------------------------------------------------
@@ -209,12 +196,10 @@ B1, B2, B3 = Mouse buttons 1--3.\\
 {\color{mygray}\line(1,0){30}} % Print the line with a custom color
 
 \footnotesize{
-Created by John Smith, 2015\\ 
-\url{http://johnsmith.com/}\\
+2020 \\ 
 				
 Released under the MIT license.
 }
-
 %----------------------------------------------------------------------------------------
 
 \end{minipage} % End the third column of text
