--- a/epic_emr_cheatsheet.tex
+++ b/epic_emr_cheatsheet.tex
@@ -9,8 +9,7 @@
 % Original author:
 % Michael Müller (https://github.com/cmichi/latex-template-collection) with
 % extensive modifications by Vel (vel@LaTeXTemplates.com)
-% EPIC EMR Shortcut Author:
-%	Jed Frey, <2020>
+% EPIC EMR Shortcut Author: Jed Frey, <2020>
 %
 % License:
 % The MIT License (see included LICENSE file)
@@ -38,9 +37,9 @@
 \usepackage[ % This block contains information used to annotate the PDF
 colorlinks=false, 
 pdftitle={Cheatsheet}, 
-pdfauthor={John Smith}, 
+pdfauthor={Jed Frey}, 
 pdfsubject={Compilation of useful shortcuts}, 
-pdfkeywords={Random Software, Cheatsheet}
+pdfkeywords={EPIC EMR, Cheatsheet}
 ]{hyperref}
 
 \setlength{\unitlength}{1mm} % Set the length that numerical units are measured in
@@ -79,45 +78,35 @@ pdfkeywords={Random Software, Cheatsheet}
 %	HEADING ONE
 %----------------------------------------------------------------------------------------
 
-\sectiontitle{Window manager control}
-			
-Client = Application window.\\
-
+\sectiontitle{Activity Tab: Orders}
+		
+\command{Ctrl + O}{Open Activity Tab Orders}
 \command{Alt + A}{Accept Orders}
 \command{Alt + S}{Sign Orders}
-\command{Mod4 + F1}{Run terminal prompt}
-\command{Mod4 + F4}{Run Lua code prompt}
 
 %----------------------------------------------------------------------------------------
 %	HEADING TWO
 %----------------------------------------------------------------------------------------				
 			
-\sectiontitle{Clients}
+\sectiontitle{Template Variables}
 			
-\command{Mod4 + Shift + r}{Redraw the focused window}
-\command{Mod4 + m}{Maximize client}
-\command{Mod4 + f}{Set client fullscreen}
-\command{Mod4 + Shift + c}{Kill focused client}
+\command{@NAME@}{Name}
+\command{@DOB@}{Date of Birth}
+\command{@MRN@}{Medical Record Number}
+\command{@ROOMBED@}{Room \& Bed}
+\command{@FDATE@}{Today}
+\command{@ADMITDT@}{Admit Time}
 
-\command{Mod4 + 1}{Go to Tag 1}
-\command{Mod4 + Ctrl + 1-9}{Toggle tag view}
-\command{Mod4 + t}{Toggle tag view}
-\command{Mod4 + Shift + 1-9}{Tag marked clients with tag}
-\command{Mod4 + Shift + Ctrl + 1-9}{Toggle tag on client}
-
-%----------------------------------------------------------------------------------------
+------------------
 %	HEADING THREE
 %----------------------------------------------------------------------------------------	
 
 \sectiontitle{Mouse}
 
-B1, B2, B3 = Mouse buttons 1--3.\\
 
-\command{Mod4 + B1 on tag}{Tag client with this tag}
-\command{Mod4 + B1 on client}{Move window}
-\command{Mod4 + B3 on tag}{Toggle this tag for client}
-\command{Mod4 + B3 on client}{Resize window}
-\command{B3 clicked on tag}{Add tag to current view}
+\command{Click}{Open Activity Tab}
+\command{Click. Click.}{Accept Orders}
+\command{Click. Click. Click.}{Sign Orders}
 
 %----------------------------------------------------------------------------------------
 
@@ -180,6 +169,9 @@ B1, B2, B3 = Mouse buttons 1--3.\\
 \put(200,180){ % Divide the page
 \begin{minipage}[t]{85mm} % Create a box to house tex
 
+\sectiontitle{Justification}
+
+Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. 
 %----------------------------------------------------------------------------------------
 %	LINKS AND INFORMATION
 %----------------------------------------------------------------------------------------
@@ -187,6 +179,8 @@ B1, B2, B3 = Mouse buttons 1--3.\\
 \sectiontitle{Links and information}
 
 \url{https://www.epic.com/}
+
+\LaTeX
 %----------------------------------------------------------------------------------------
 %	FOOTNOTE
 %----------------------------------------------------------------------------------------
