--- a/epic_emr_cheatsheet.tex
+++ b/epic_emr_cheatsheet.tex
@@ -88,6 +88,33 @@ pdfkeywords={EPIC EMR, Cheatsheet}
 %	HEADING TWO
 %----------------------------------------------------------------------------------------				
 			
+
+------------------
+%	HEADING THREE
+%----------------------------------------------------------------------------------------	
+
+\sectiontitle{Dot Phrases}
+
+Fishbones for CBCs and BMPs to organize lab data in notes: \\
+
+\command{.fishbmp}{Basic Metabolic Panel}
+\command{.fishcbc}{Complete Blood Count}
+
+
+Import impressions of imaging results: \\ 
+
+\command{.RISIMP24H}{Last 24 hours}
+\command{.RISIMP72H}{Last 72 hours}
+\command{.RISRSLTIMP}{From the current encounter}
+
+
+\command{.fs4}{Last 4 accucheck glucose readings}
+\command{.last3a1c}{Last 3 A1c's on record}
+\command{.uamicrolast}{Last UA results w/ microscopic}
+\command{.cmed}{Current meds}
+\command{.me}{Your name \& role}
+\command{.sig}{Your name, date, time}
+
 \sectiontitle{Template Variables}
 			
 \command{@NAME@}{Name}
@@ -97,16 +124,6 @@ pdfkeywords={EPIC EMR, Cheatsheet}
 \command{@FDATE@}{Today}
 \command{@ADMITDT@}{Admit Time}
 
-------------------
-%	HEADING THREE
-%----------------------------------------------------------------------------------------	
-
-\sectiontitle{Mouse}
-
-
-\command{Click}{Open Activity Tab}
-\command{Click. Click.}{Accept Orders}
-\command{Click. Click. Click.}{Sign Orders}
 
 %----------------------------------------------------------------------------------------
 
@@ -120,42 +137,20 @@ pdfkeywords={EPIC EMR, Cheatsheet}
 \put(105,180){ % Divide the page
 \begin{minipage}[t]{85mm} % Create a box to house text
 
-%----------------------------------------------------------------------------------------
-%	HEADING FOUR
-%----------------------------------------------------------------------------------------
+\sectiontitle{Mouse}
 
-\sectiontitle{Navigation}
 
-\command{Mod4 + j}{Focus next client}
-\command{Mod4 + k}{Focus previous client}
-\command{Mod4 + u}{Focus first urgent client}
-\command{Mod4 + Left}{View previous tag}
-\command{Mod4 + Right}{View next tag}
-\command{Mod4 + 1-9}{Switch to tag 1-9}
-\command{Mod4 + Ctrl + j}{Focus next screen}
-\command{Mod4 + Ctrl + k}{Focus previous screen}
-\command{Mod4 + j}{Focus next client}
-\command{Mod4 + k}{Focus previous client}
-\command{Mod4 + u}{Focus first urgent client}
-\command{Mod4 + Esc}{Focus previously selected tag set}
+\command{Click}{Open Activity Tab}
+\command{Click. Click.}{Accept Orders}
+\command{Click. Click. Click.}{Sign Orders}
+
 					
 %----------------------------------------------------------------------------------------
 %	HEADING FIVE
 %----------------------------------------------------------------------------------------				
 					
-\sectiontitle{Layout modification} % Heading five
+Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. 
 
-\command{Mod4 + Shift + k / j}{Rotate clients around}
-\command{Mod4 + h / l}{Change master width by 5\%}
-\command{Mod4 + Shift + h}{Number of master windows +1}
-\command{Mod4 + Shift + l}{Number of master windows --1}
-\command{Mod4 + Ctrl + h}{Number of columns for non-master windows +1}
-\command{Mod4 + Ctrl + l}{Number of columns for non-master windows --1}
-
-\command{Mod4 + Space}{Next layout}
-\command{Mod4 + Shift + Space}{Previous layout}
-\command{Mod4 + Ctrl + Space}{Floating master}
-\command{Mod4 + Ctrl + Return}{Swap focused client with master}
 
 %----------------------------------------------------------------------------------------
 
@@ -169,7 +164,7 @@ pdfkeywords={EPIC EMR, Cheatsheet}
 \put(200,180){ % Divide the page
 \begin{minipage}[t]{85mm} % Create a box to house tex
 
-\sectiontitle{Justification}
+\sectiontitle{Mouse}
 
 Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. Click. 
 %----------------------------------------------------------------------------------------
